<package format="3">
  <name>rqt_robot_steering</name>
  <version>0.5.9</version>
  <description>rqt_robot_steering provides a GUI plugin for steering a robot using Twist messages.</description>
  <maintainer email="dthomas@osrfoundation.org">Dirk Thomas</maintainer>
  <maintainer email="ablasdel@gmail.com">Aaron Blasdel</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rqt_robot_steering</url>
  <url type="repository">https://github.com/ros-visualization/rqt_robot_steering</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_robot_steering/issues</url>

  <author>Dirk Thomas</author>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend version_gte="0.2.19">python_qt_binding</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rqt_gui</exec_depend>
  <exec_depend>rqt_gui_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
